--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
     <version>3.0.1</version>
     <scope>provided</scope>
 </dependency>
+<dependency>
+      <groupId>com.openshift</groupId>
+      <artifactId>openshift-java-client</artifactId>
+      <version>2.7.0.Final</version>
+  </dependency>
   </dependencies>
   
    <profiles>
